examples/failing/Superclasses3.purs
module UnknownSuperclassTypeVar where

class Foo a

class (Foo b) <= Bar a
